--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,40 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>PypiRequirements</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="canonical" href="https://poipoii.github.io/pypi-requirements/" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
+  <link rel="manifest" href="/assets/site.webmanifest">
+  <link rel="mask-icon" href="/assets/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+
+  <!-- Primary Meta Tags -->
+  <title>pypi-requirements | Keep you pypi requirements up-to-date</title>
+  <meta name="title" content="pypi-requirements | Keep you pypi requirements up-to-date">
+  <meta name="description" content="Keep you pypi requirements up-to-date">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://poipoii.github.io/pypi-requirements/">
+  <meta property="og:title" content="pypi-requirements | Keep you pypi requirements up-to-date">
+  <meta property="og:description" content="Keep you pypi requirements up-to-date">
+  <meta property="og:image" content="https://poipoii.github.io/pypi-requirements/assets/cover.png">
+  <meta property="og:image:width" content="1081" />
+  <meta property="og:image:height" content="601" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://poipoii.github.io/pypi-requirements/">
+  <meta property="twitter:title" content="pypi-requirements | Keep you pypi requirements up-to-date">
+  <meta property="twitter:description" content="Keep you pypi requirements up-to-date">
+  <meta property="twitter:image" content="https://poipoii.github.io/pypi-requirements/assets/cover.png">
 </head>
 <body>
   <app-root></app-root>
