--- a/src/index.html
+++ b/src/index.html
@@ -3,16 +3,17 @@
 <head>
   <meta charset="utf-8">
   <base href="/">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/pypi-requirements/favicon.ico">
   <link rel="canonical" href="https://poipoii.github.io/pypi-requirements/" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
-  <link rel="manifest" href="/assets/site.webmanifest">
-  <link rel="mask-icon" href="/assets/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="apple-touch-icon" sizes="180x180" href="/pypi-requirements/assets/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/pypi-requirements/assets/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/pypi-requirements/assets/favicon-16x16.png">
+  <link rel="manifest" href="/pypi-requirements/assets/site.webmanifest">
+  <link rel="mask-icon" href="/pypi-requirements/assets/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
 
@@ -20,6 +21,7 @@
   <title>pypi-requirements | Keep you pypi requirements up-to-date</title>
   <meta name="title" content="pypi-requirements | Keep you pypi requirements up-to-date">
   <meta name="description" content="Keep you pypi requirements up-to-date">
+  <meta name="google-site-verification" content="HipZ22wrSvlKvYjx86uJUfbvqfW8eJKTZqbBB8FHnOM" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
