--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="/pypi-requirements/favicon.ico">
-  <link rel="canonical" href="https://poipoii.github.io/pypi-requirements/" />
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="canonical" href="https://poipoii.github.io/pypi-requirements/"/>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="apple-touch-icon" sizes="180x180" href="/pypi-requirements/assets/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/pypi-requirements/assets/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/pypi-requirements/assets/favicon-16x16.png">
-  <link rel="manifest" href="/pypi-requirements/assets/site.webmanifest">
-  <link rel="mask-icon" href="/pypi-requirements/assets/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
+  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="mask-icon" href="assets/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
 
@@ -21,7 +21,7 @@
   <title>pypi-requirements | Keep you pypi requirements up-to-date</title>
   <meta name="title" content="pypi-requirements | Keep you pypi requirements up-to-date">
   <meta name="description" content="Keep you pypi requirements up-to-date">
-  <meta name="google-site-verification" content="HipZ22wrSvlKvYjx86uJUfbvqfW8eJKTZqbBB8FHnOM" />
+  <meta name="google-site-verification" content="HipZ22wrSvlKvYjx86uJUfbvqfW8eJKTZqbBB8FHnOM"/>
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
@@ -29,8 +29,8 @@
   <meta property="og:title" content="pypi-requirements | Keep you pypi requirements up-to-date">
   <meta property="og:description" content="Keep you pypi requirements up-to-date">
   <meta property="og:image" content="https://poipoii.github.io/pypi-requirements/assets/cover.png">
-  <meta property="og:image:width" content="1081" />
-  <meta property="og:image:height" content="601" />
+  <meta property="og:image:width" content="1081"/>
+  <meta property="og:image:height" content="601"/>
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
@@ -41,5 +41,6 @@
 <link rel="stylesheet" href="/pypi-requirements/styles.bdee0a91f96883de21d8.css"></head>
 <body>
   <app-root></app-root>
-<script src="/pypi-requirements/runtime-es2015.5591209840b418e55b6c.js" type="module"></script><script src="/pypi-requirements/runtime-es5.5591209840b418e55b6c.js" nomodule defer></script><script src="/pypi-requirements/polyfills-es5.931f63c2feef40f602a6.js" nomodule defer></script><script src="/pypi-requirements/polyfills-es2015.0ef207fb7b4761464817.js" type="module"></script><script src="/pypi-requirements/main-es2015.f7c9b4251a87fb284576.js" type="module"></script><script src="/pypi-requirements/main-es5.f7c9b4251a87fb284576.js" nomodule defer></script></body>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
+<script src="/pypi-requirements/runtime-es2015.949a2000929a525e4355.js" type="module"></script><script src="/pypi-requirements/runtime-es5.949a2000929a525e4355.js" nomodule defer></script><script src="/pypi-requirements/polyfills-es5.6696c533341b95a3d617.js" nomodule defer></script><script src="/pypi-requirements/polyfills-es2015.2987770fde9daa1d8a2e.js" type="module"></script><script src="/pypi-requirements/scripts.6842942bccbac6e8107d.js" defer></script><script src="/pypi-requirements/main-es2015.4f22a3b6de827199a362.js" type="module"></script><script src="/pypi-requirements/main-es5.4f22a3b6de827199a362.js" nomodule defer></script></body>
 </html>
