Deployed using Blazing fast GitHub Pages deploy

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <base href="/">
-
+  <base href="/pypi-requirements/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="canonical" href="https://poipoii.github.io/pypi-requirements/"/>
@@ -38,9 +37,9 @@
   <meta property="twitter:title" content="pypi-requirements | Keep you pypi requirements up-to-date">
   <meta property="twitter:description" content="Keep you pypi requirements up-to-date">
   <meta property="twitter:image" content="https://poipoii.github.io/pypi-requirements/assets/cover.png">
-<link rel="stylesheet" href="/pypi-requirements/styles.bdee0a91f96883de21d8.css"></head>
+<link rel="stylesheet" href="styles.bdee0a91f96883de21d8.css"></head>
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="/pypi-requirements/runtime-es2015.949a2000929a525e4355.js" type="module"></script><script src="/pypi-requirements/runtime-es5.949a2000929a525e4355.js" nomodule defer></script><script src="/pypi-requirements/polyfills-es5.6696c533341b95a3d617.js" nomodule defer></script><script src="/pypi-requirements/polyfills-es2015.2987770fde9daa1d8a2e.js" type="module"></script><script src="/pypi-requirements/scripts.6842942bccbac6e8107d.js" defer></script><script src="/pypi-requirements/main-es2015.4f22a3b6de827199a362.js" type="module"></script><script src="/pypi-requirements/main-es5.4f22a3b6de827199a362.js" nomodule defer></script></body>
+<script src="runtime-es2015.edb2fcf2778e7bf1d426.js" type="module"></script><script src="runtime-es5.edb2fcf2778e7bf1d426.js" nomodule defer></script><script src="polyfills-es5.6696c533341b95a3d617.js" nomodule defer></script><script src="polyfills-es2015.2987770fde9daa1d8a2e.js" type="module"></script><script src="scripts.6842942bccbac6e8107d.js" defer></script><script src="main-es2015.39c2bdb0d85615f4fe8d.js" type="module"></script><script src="main-es5.39c2bdb0d85615f4fe8d.js" nomodule defer></script></body>
 </html>
