--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
   <meta property="twitter:title" content="pypi-requirements | Keep you pypi requirements up-to-date">
   <meta property="twitter:description" content="Keep you pypi requirements up-to-date">
   <meta property="twitter:image" content="https://poipoii.github.io/pypi-requirements/assets/cover.png">
-<link rel="stylesheet" href="styles.bdee0a91f96883de21d8.css"></head>
+<link rel="stylesheet" href="styles.20d5b7626697c55bd493.css"></head>
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime-es2015.edb2fcf2778e7bf1d426.js" type="module"></script><script src="runtime-es5.edb2fcf2778e7bf1d426.js" nomodule defer></script><script src="polyfills-es5.6696c533341b95a3d617.js" nomodule defer></script><script src="polyfills-es2015.2987770fde9daa1d8a2e.js" type="module"></script><script src="scripts.6842942bccbac6e8107d.js" defer></script><script src="main-es2015.39c2bdb0d85615f4fe8d.js" type="module"></script><script src="main-es5.39c2bdb0d85615f4fe8d.js" nomodule defer></script></body>
+<script src="runtime-es2015.edb2fcf2778e7bf1d426.js" type="module"></script><script src="runtime-es5.edb2fcf2778e7bf1d426.js" nomodule defer></script><script src="polyfills-es5.6696c533341b95a3d617.js" nomodule defer></script><script src="polyfills-es2015.2987770fde9daa1d8a2e.js" type="module"></script><script src="main-es2015.294d87652e6532073ba6.js" type="module"></script><script src="main-es5.294d87652e6532073ba6.js" nomodule defer></script></body>
 </html>
