--- a/index.html
+++ b/index.html
@@ -41,5 +41,5 @@
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime-es2015.edb2fcf2778e7bf1d426.js" type="module"></script><script src="runtime-es5.edb2fcf2778e7bf1d426.js" nomodule defer></script><script src="polyfills-es5.6696c533341b95a3d617.js" nomodule defer></script><script src="polyfills-es2015.2987770fde9daa1d8a2e.js" type="module"></script><script src="main-es2015.2daad8361178236aea22.js" type="module"></script><script src="main-es5.2daad8361178236aea22.js" nomodule defer></script></body>
+<script src="polyfills-es5.7aaacbf76784c780632a.js" nomodule defer></script><script src="polyfills-es2015.0fe6949bc5ff4b784062.js" type="module"></script><script src="runtime-es2015.85f895af57b038f1e5b4.js" type="module"></script><script src="main-es2015.8a83403ff608d49b70e6.js" type="module"></script><script src="runtime-es5.85f895af57b038f1e5b4.js" nomodule defer></script><script src="main-es5.8a83403ff608d49b70e6.js" nomodule defer></script></body>
 </html>
