Deployed using Blazing fast GitHub Pages deploy

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
   <meta property="twitter:title" content="pypi-requirements | Keep you pypi requirements up-to-date">
   <meta property="twitter:description" content="Keep you pypi requirements up-to-date">
   <meta property="twitter:image" content="https://poipoii.github.io/pypi-requirements/assets/cover.png">
-<link rel="stylesheet" href="styles.20d5b7626697c55bd493.css"></head>
+<link rel="stylesheet" href="styles.5f3a2254fd1bcdf148c1.css"></head>
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="polyfills-es5.7aaacbf76784c780632a.js" nomodule defer></script><script src="polyfills-es2015.0fe6949bc5ff4b784062.js" type="module"></script><script src="runtime-es2015.85f895af57b038f1e5b4.js" type="module"></script><script src="main-es2015.8c9c6c5b53c66b8b75f9.js" type="module"></script><script src="runtime-es5.85f895af57b038f1e5b4.js" nomodule defer></script><script src="main-es5.8c9c6c5b53c66b8b75f9.js" nomodule defer></script></body>
+<script src="runtime-es2015.0811dcefd377500b5b1a.js" type="module"></script><script src="runtime-es5.0811dcefd377500b5b1a.js" nomodule defer></script><script src="polyfills-es5.1d087d4db6b105875851.js" nomodule defer></script><script src="polyfills-es2015.ca64e4516afbb1b890d5.js" type="module"></script><script src="main-es2015.c8e6d7b3c781557b8155.js" type="module"></script><script src="main-es5.c8e6d7b3c781557b8155.js" nomodule defer></script></body>
 </html>
